Fixed a styling bug on mobile

--- a/frontend/src/App.module.scss
+++ b/frontend/src/App.module.scss
@@ -19,3 +19,9 @@
     row-gap: 2rem;
   }
 }
+
+@media (max-width: $media-width) {
+  .column-wrapper {
+    overflow: hidden;
+  }
+}
